@@ -155,7 +155,7 @@ static const double PI = 3.14159265358979323846;
 #ifdef __cplusplus
 template <typename T, size_t N>
 // constexpr // C++11
-size_t array_size(T(&)[N]) {
+size_t array_length(T(&)[N]) {
     return N;
 }
 #endif
