@@ -135,7 +135,7 @@ struct param *param_table = 0 /* nullptr */;
 
 void set_param(const char *name, int value)
 {
-  for (size_t i = 0; i <= array_size(default_param_table); i++)
+  for (size_t i = 0; i <= array_length(default_param_table); i++)
     if (strcmp(param_table[i].name, name) == 0) {
       *(param_table[i].ptr) = value;
       return;
@@ -145,7 +145,7 @@ void set_param(const char *name, int value)
 
 void reset_param(const char *name)
 {
-  for (size_t i = 0; i < array_size(default_param_table); i++)
+  for (size_t i = 0; i < array_length(default_param_table); i++)
     if (strcmp(param_table[i].name, name) == 0) {
       *param_table[i].ptr = *(default_param_table[i].ptr);
       return;
@@ -156,7 +156,7 @@ void reset_param(const char *name)
 
 int get_param(const char *name)
 {
-  for (size_t i = 0; i < array_size(default_param_table); i++)
+  for (size_t i = 0; i < array_length(default_param_table); i++)
     if (strcmp(param_table[i].name, name) == 0)
       return *(param_table[i].ptr);
   assert(0 == "attempted to access parameter not in table");
@@ -165,8 +165,8 @@ int get_param(const char *name)
 
 void init_param_table()
 {
-  param_table = new param[array_size(default_param_table)];
-  for (size_t i = 0; i < array_size(default_param_table); i++) {
+  param_table = new param[array_length(default_param_table)];
+  for (size_t i = 0; i < array_length(default_param_table); i++) {
     param_table[i].name = default_param_table[i].name;
     param_table[i].ptr = new int(*(default_param_table[i].ptr));
   }
@@ -175,7 +175,7 @@ void init_param_table()
 void free_param_table()
 {
   if (param_table != 0 /* nullptr */) {
-    for (size_t i = 0; i < array_size(default_param_table); i++)
+    for (size_t i = 0; i < array_length(default_param_table); i++)
       delete param_table[i].ptr;
     delete[] param_table;
     param_table = 0 /* nullptr */;
